--- a/parent/pom.xml
+++ b/parent/pom.xml
@@ -177,6 +177,24 @@
                 </plugin>
             </plugins>
         </pluginManagement>
+        <plugins>
+            <plugin>
+                <groupId>org.cyclonedx</groupId>
+                <artifactId>cyclonedx-maven-plugin</artifactId>
+                <version>2.7.9</version>
+                <!-- Including TestScope for those specificacions with testing references -->
+                <configuration>
+                    <includeTestScope>true</includeTestScope>
+                </configuration>
+                <executions>
+                    <execution>
+                        <goals>
+                            <goal>makeAggregateBom</goal>
+                        </goals>
+                    </execution>
+                </executions>
+            </plugin>
+        </plugins>
     </build>
 
     <profiles>
